prod/apps/extra/app-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-route
  namespace: app-prod
spec:
  parentRefs:
    - name: platform-gateway
      namespace: gateway-system

  hostnames:
    - app.pilotgab.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: app-service
          port: 80
